--- a/web/front/index.html
+++ b/web/front/index.html
@@ -1,3 +1,36 @@
 <!DOCTYPE html>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href='inc/css/style.css'>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src='inc/js/script.js'></script>
+    <!------ Include the above in your HEAD tag ---------->
+</head>
 <html lang='pt-br'>
+    <div class="wrapper fadeInDown">
+        <div id="formContent">
+            <!-- Tabs Titles -->
+
+            <!-- Icon -->
+            <div class="fadeIn first">
+                <h2 style="padding-top: 20px; padding-bottom: 20px;">Acessar módulo</h2>
+            </div>
+
+            <!-- Login Form -->
+            <form class="form" method="post" action="#">
+                <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
+                <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
+                <input type="submit" class="fadeIn fourth" id='submit' name='submit' value="Log In">
+            </form>
+
+            <!-- Remind Passowrd -->
+            <div id="formFooter">
+                <a class="underlineHover" href="#">&copy; 2020 fisicatual.com.br</a>
+            </div>
+
+        </div>
+    </div>
+
 </html>
