Login v1 front requests test

--- a/web/front/index.html
+++ b/web/front/index.html
@@ -5,7 +5,13 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <script src='inc/js/api/consts.js'></script>
     <script src='inc/js/script.js'></script>
+    
+
     <!------ Include the above in your HEAD tag ---------->
 </head>
 <html lang='pt-br'>
