--- a/web/front/index.html
+++ b/web/front/index.html
@@ -16,7 +16,7 @@
 </head>
 <html lang='pt-br'>
     <div class="wrapper fadeInDown">
-        <div id="formContent">
+        <div id="formContent" class="allowed" style="background-color: #049b69;">
             <!-- Tabs Titles -->
 
             <!-- Icon -->
@@ -30,6 +30,18 @@
                 <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
                 <input type="submit" class="fadeIn fourth" id='submit' name='submit' value="Log In">
             </form>
+
+            <!-- Remind Passowrd -->
+            <div id="formFooter">
+                <a class="underlineHover" href="#">&copy; 2020 fisicatual.com.br</a>
+            </div>
+
+        </div>
+        <div id="formContent" class="not_allowed"  style="background-color: #c12a2c;">
+            <!-- Icon -->
+            <div class="fadeIn first">
+                <h2 class=''style="padding-top: 20px; padding-bottom: 20px;">Módulo ocupado</h2>
+            </div>
 
             <!-- Remind Passowrd -->
             <div id="formFooter">
