Bind buttons to back-end

--- a/web/front/modulo/index.html
+++ b/web/front/modulo/index.html
@@ -44,7 +44,11 @@
                             <h3 id="demo"></h3>
                         </div>
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" id='rele1'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele2'>
                             <span class="slider"></span>
                         </label>
                         
