Web front: Get all inputs values

--- a/web/front/modulo/index.html
+++ b/web/front/modulo/index.html
@@ -40,8 +40,8 @@
                 <div class="col-sm-4">
                     <div class="control">
                         <div class="slidecontainer">
-                            <input type="range" min="1" max="100" value="50" class="ranger" id="myRange">
-                            <h3 id="demo"></h3>
+                            <input type="range" min="15" max="30" value="15" class="ranger" id="fonte">
+                            <h3 id="fonte_out">15</h3>
                         </div>
                         <label class="switch">
                             <input type="checkbox" id='rele1'>
@@ -51,7 +51,50 @@
                             <input type="checkbox" id='rele2'>
                             <span class="slider"></span>
                         </label>
-                        
+                        <label class="switch">
+                            <input type="checkbox" id='rele3'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele4'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele5'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele6'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele7'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele8'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele9'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele10'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele11'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele12'>
+                            <span class="slider"></span>
+                        </label>
+                        <label class="switch">
+                            <input type="checkbox" id='rele13'>
+                            <span class="slider"></span>
+                        </label>
                     </div>
                 </div>
             </div>
