WEB front: Fix problem init state of inputs

--- a/web/front/modulo/index.html
+++ b/web/front/modulo/index.html
@@ -14,6 +14,7 @@
 
     <script src='../inc/js/api/consts.js'></script>
     <script src='inc/js/script.js'></script>
+    <script src='inc/js/consts.js'></script>
     
 
 </head>
@@ -40,59 +41,59 @@
                 <div class="col-sm-4">
                     <div class="control">
                         <div class="slidecontainer">
-                            <input type="range" min="15" max="30" value="15" class="ranger" id="fonte">
+                            <input type="range" min="15" max="30" class="ranger" id="inp_i_fonte">
                             <h3 id="fonte_out">15</h3>
                         </div>
                         <label class="switch">
-                            <input type="checkbox" id='rele1'>
+                            <input type="checkbox" id='inp_b_rele1'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele2'>
+                            <input type="checkbox" id='inp_b_rele2'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele3'>
+                            <input type="checkbox" id='inp_b_rele3'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele4'>
+                            <input type="checkbox" id='inp_b_rele4'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele5'>
+                            <input type="checkbox" id='inp_b_rele5'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele6'>
+                            <input type="checkbox" id='inp_b_rele6'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele7'>
+                            <input type="checkbox" id='inp_b_rele7'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele8'>
+                            <input type="checkbox" id='inp_b_rele8'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele9'>
+                            <input type="checkbox" id='inp_b_rele9'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele10'>
+                            <input type="checkbox" id='inp_b_rele10'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele11'>
+                            <input type="checkbox" id='inp_b_rele11'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele12'>
+                            <input type="checkbox" id='inp_b_rele12'>
                             <span class="slider"></span>
                         </label>
                         <label class="switch">
-                            <input type="checkbox" id='rele13'>
+                            <input type="checkbox" id='inp_b_rele13'>
                             <span class="slider"></span>
                         </label>
                     </div>
