--- a/web/front/index.html
+++ b/web/front/index.html
@@ -20,7 +20,7 @@
 
             <!-- Icon -->
             <div class="fadeIn first">
-                <h2 style="padding-top: 20px; padding-bottom: 20px;">Acessar módulo</h2>
+                <h2 style="padding-top: 20px;padding-bottom: 20px;color: #fff;">Acessar módulo</h2>
             </div>
 
             <!-- Login Form -->
@@ -41,7 +41,7 @@
         <div id="formContent" class="not_allowed"  style="background-color: #c12a2c;">
             <!-- Icon -->
             <div class="fadeIn first">
-                <h2 class=''style="padding-top: 20px; padding-bottom: 20px;">Módulo ocupado</h2>
+                <h2 class=''style="padding-top: 20px; padding-bottom: 20px; color: #fff;">Módulo ocupado</h2>
             </div>
 
             <!-- Remind Passowrd -->
