--- a/web/front/modulo/index.html
+++ b/web/front/modulo/index.html
@@ -3,11 +3,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="../modulo/inc/vendor/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="../modulo/inc/vendor/bootstrap.min.js"></script>
+    <script src="../modulo/inc/vendor/jquery.min.js"></script>
     
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../modulo/inc/vendor/axios.min.js"></script>
     
     <!--<link href="./inc/css/grid.css" rel="stylesheet">-->
     <link href="./inc/css/style.css" rel="stylesheet">
@@ -33,7 +33,7 @@
     <section id="main" class="mt-4">
         <div class="container-fluid ">
             <div class="row">
-                <div class="col-sm-8">
+                <!-- <div class="col-sm-8">
                     <div class="live">
                         <iframe 
                             src="https://player.twitch.tv/?channel=mateuskb&parent= " 
@@ -44,7 +44,7 @@
                             width="100%">
                         </iframe>
                     </div>      
-                </div>
+                </div> -->
                 <div class="col-sm-4">
                     <h2>Controle</h2>
                     <div class="control">
