negate, all perfect

--- a/web/front/modulo/index.html
+++ b/web/front/modulo/index.html
@@ -15,12 +15,12 @@
     <script src='../inc/js/api/consts.js'></script>
     <script src='inc/js/script.js'></script>
     <script src='inc/js/consts.js'></script>
-    <script src="https://player.twitch.tv/js/embed/v1.js"></script>
-    <script type="text/javascript">
+    <!-- <script src="https://player.twitch.tv/js/embed/v1.js"></script> -->
+    <!-- <script type="text/javascript">
         new Twitch.Player("twitch-embed", {
           channel: "mateuskb"
         });
-    </script>
+    </script> -->
 
 </head>
 <html lang='pt-br'>
