Small visual changes

--- a/prod/front/index.html
+++ b/prod/front/index.html
@@ -4,6 +4,8 @@
 
     <meta charset="utf-8">
 
+    <title>Pibiti - login</title>
+
     <link rel="stylesheet" href='inc/css/style.css'>
 
     <link href="./modulo/inc/vendor/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
