Small visual changes

--- a/prod/front/modulo/index.html
+++ b/prod/front/modulo/index.html
@@ -101,7 +101,7 @@
                     <h2>Controle</h2>
 
                     <div class="aviso">
-                        <p>Para a proteção do módulo, todos os botões estão sincronizados com o experimento remoto, portanto ao clicar muito rápido poderá ser sentido algumas inconsistências, para resolver isso, clique mais devagar!</p>
+                        <p>Para a proteção do módulo, todos os botões estão sincronizados com o experimento remoto, portanto ao clicar muito rápido poderá ser sentida algumas inconsistências, para resolver isso, clique mais devagar!</p>
                     </div>
 
                     <div class="control">
