Small visual changes

--- a/prod/front/index.html
+++ b/prod/front/index.html
@@ -96,7 +96,8 @@
 
             <div id="formFooter">
 
-                <a class="underlineHover" href="#">&copy; 2020 fisicatual.com.br</a>
+                <!-- <a class="underlineHover" href="#">&copy; 2020 fisicatual.com.br</a> -->
+                <a class="underlineHover" href="http://appfeliz.com.br/">&copy; 2020 appfeliz.com.br</a>
 
             </div>
 
