from twitch to youtube

--- a/prod/front/modulo/index.html
+++ b/prod/front/modulo/index.html
@@ -32,7 +32,7 @@
 
     <script src='inc/js/consts.js'></script>
 
-    <script src="https://player.twitch.tv/js/embed/v1.js"></script>
+    <!-- <script src="https://player.twitch.tv/js/embed/v1.js"></script>
 
     <script type="text/javascript">
 
@@ -42,7 +42,7 @@
 
         });
 
-    </script>
+    </script> -->
 
 
 
@@ -70,9 +70,26 @@
 
                 <div class="col-sm-12">
 
-                    <div class="live twitch-embed">
+                    <div class="live">
 
                         <iframe 
+
+                            src="https://www.youtube.com/embed/live_stream?channel=UCuw08E82KoBlq6w0QxyLfJQ&autoplay=1"
+
+                            frameborder="0"    
+
+                            allow="autoplay; encrypted-media; gyroscope; picture-in-picture"
+
+                            allowfullscreen="true" 
+
+                            scrolling="no" 
+
+                            height="100%" 
+
+                            width="100%">
+
+                        </iframe>
+                        <!-- <iframe 
 
                             src="https://player.twitch.tv/?channel=mateuskb&parent=appfeliz.com.br" 
 
@@ -86,7 +103,7 @@
 
                             width="100%">
 
-                        </iframe>
+                        </iframe> -->
 
                     </div>      
 
